# editorconfig-vim

./: .appveyor.yml  .editorconfig  .gitignore  .gitmodules  .travis.yml  AUTHORS  LICENSE  README.md  README.rst  editorconfig.py  editorconfig.vim  fnmatch.py  ini.py  main.py  mkzip.sh  setup.py  vendor.yml
autoload/: editorconfig.vim  editorconfig_core.vim
doc/: editorconfig.txt
docs/: exceptions.rst  index.rst  plugins.rst  usage.rst
editorconfig/: __init__.py  compat.py  editorconfig.py  exceptions.py  fnmatch.py  handler.py  ini.py  main.py  odict.py  versiontools.py
ftdetect/: editorconfig.vim
java-binding/: .editorconfig  .gitignore  README  README.md  build.xml
jython/: .editorconfig  .gitignore  (+2 more)
plugin/editorconfig-core-py/: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  README.rst  setup.py
plugin/editorconfig-core-py/docs/: Makefile  command_line_usage.rst  conf.py  index.rst  plugins.rst  usage.rst
plugin/editorconfig-core-py/editorconfig/: __init__.py  compat.py  exceptions.py  fnmatch.py  handler.py  ini.py  main.py  odict.py
plugin/editorconfig-core-py/java-binding/: README.md  build.xml
plugin/editorconfig-core-py/java-binding/example/: test-example.bat  test-example.sh
plugin/editorconfig-core-py/java-binding/jython-engine/: THIRDPARTYLICENSES.TXT
plugin/editorconfig-core-py/java-binding/src/org/editorconfig/core/: PathException.java  VersionException.java  package-info.java
tests/core/: CMakeLists.txt  CTestCustom.cmake  ecvbslib.vbs  ecvimlib.ps1  editorconfig  editorconfig.bat  editorconfig1.vbs  editorconfig2.ps1
(+44 files in other folders)
